# quendor

./: .flake8  .gitignore  README-DEV.md  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
src/quendor/: __main__.py  __version__.py  cli.py  errors.py  logging.py  program.py  startup.py
src/quendor/scripts/: analyzer.py  downloader.py
tests/: test_quendor.py
tests/fixtures/: test_program.z5  test_program.zblorb
