[tool.poetry]
name = "quendor"
version = "0.1.0"
description = "A Z-Machine Emulator and Interpreter"
authors = ["Jeff Nyman <quendor.app@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jeffnyman/quendor"
repository = "https://github.com/jeffnyman/quendor"
keywords = [
    "z-machine",
    "interpreter",
    "emulator"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment"]

[tool.pytest.ini_options]
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["quendor"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.coverage.html]
show_contexts = true
title = "Quendor Test Coverage"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
pytest-spec = "^3.2.0"
pytest-cov = "^3.0.0"
coverage = {version = "^6.2", extras = ["toml"]}
expects = "^0.9.0"
flake8 = "^4.0.1"
flake8-codes = "^0.1.1"
flake8-html = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
