[tool.poetry]
name = "quendor"
version = "0.1.0"
description = "A Z-Machine Emulator and Interpreter"
authors = ["Jeff Nyman <quendor.app@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jeffnyman/quendor"
repository = "https://github.com/jeffnyman/quendor"
keywords = [
    "z-machine",
    "interpreter",
    "emulator"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment"]

[tool.pytest.ini_options]
spec_test_format = "{result} {docstring_summary}"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["quendor"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.coverage.html]
show_contexts = true
title = "Quendor Test Coverage"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
pytest-spec = "^3.2.0"
pytest-cov = "^3.0.0"
coverage = {version = "^6.2", extras = ["toml"]}
expects = "^0.9.0"
flake8 = "^4.0.1"
flake8-codes = "^0.1.1"
flake8-html = "^0.4.1"
flake8-black = "^0.2.3"
flake8-2020 = "^1.6.1"
flake8-alphabetize = "^0.0.17"
flake8-annotations = "^2.7.0"
flake8-annotations-complexity = "^0.0.6"
flake8-annotations-coverage = "^0.0.5"
flake8-bandit = "^2.1.2"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^21.11.29"
flake8-builtins = "^1.5.3"
flake8-coding = "^1.3.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.7.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
flake8-expression-complexity = "^0.0.9"
flake8-functions = "^0.0.6"
flake8-multiline-containers = "^0.0.18"
flake8-mutable = "^1.2.0"
flake8-printf-formatting = "^1.1.2"
flake8-pytest-style = "^1.5.1"
flake8-quotes = "^3.3.1"
flake8-return = "^1.1.3"
flake8-simplify = "^0.14.2"
flake8-string-format = "^0.3.0"
flake8-use-fstring = "^1.3"
flake8-variables-names = "^0.0.4"
autoflake = "^1.4"
darglint = "^1.8.1"
pep8-naming = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
